# clinical-trial

./: .dockerignore  .gitignore  Makefile  PRD.md  README.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test.sh
.github/workflows/: deploy.yml
art/: map_oslo_overlay.html  map_oslo_sandvika_overlay.html
backend/: Dockerfile  requirements.txt
backend/app/: main.py  models.py
backend/app/services/: routing_service.py
data/: drdropin_clinics_oslo_routing_ready.csv  drdropin_clinics_oslo_sandvika_qc.csv  drdropin_clinics_oslo_sandvika_raw.csv  drdropin_clinics_oslo_sandvika_routing_ready.csv  route_start_point.csv
docs/: README.md
frontend/: Dockerfile  app.js  index.html  nginx.conf  styles.css
output/: oslo_clinics_route.gpx  oslo_route_order.csv  oslo_route_path.json  oslo_sandvika_clinics_route.gpx  oslo_sandvika_route_order.csv  oslo_sandvika_route_path.json  route_summary.json
scripts/: build_routes.py  generate_leaflet_maps.py  generate_verification_maps.py  route_tracing.py
