[project]
name = "drdropin-route-builder"
version = "0.1.0"
description = "Build shortest running routes across Dr.Dropin clinics and export GPX/map artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "pandas>=2.2.0",
  "geopy>=2.4.0",
  "osmnx>=1.9.0",
  "networkx>=3.3",
  "gpxpy>=1.6.2",
  "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
